# ezra-axum

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  ROUTEMAP.md  api.http  docker-compose.yml
migrations/: 0001_init.sql  0002_chat.sql  0003_sessions.sql
src/: config.rs  error.rs  main.rs  state.rs
src/domain/: entity.rs  mod.rs  repository.rs
src/infrastructure/: db.rs  email.rs  fcm.rs  mod.rs  payway.rs  s3.rs  seed.rs
src/infrastructure/persistence/: band_repository.rs  booking_repository.rs  chat_repository.rs  church_repository.rs  device_token_repository.rs  donation_repository.rs  event_repository.rs  favorite_repository.rs  mod.rs  music_repository.rs  notification_repository.rs  otp_repository.rs  rows.rs  session_repository.rs  setting_repository.rs  supporter_repository.rs  user_repository.rs
src/infrastructure/security/: google.rs  jwt.rs  mod.rs  password.rs
src/interface/: mod.rs
src/interface/http/: middleware.rs  mod.rs  router.rs
src/interface/http/dto/: local_time.rs  mod.rs  request.rs  response.rs
src/interface/http/handler/: auth.rs  band.rs  booking.rs  chat.rs  church.rs  device_token.rs  donation.rs  event.rs  favorite.rs  mod.rs  music.rs  notification.rs  otp.rs  setting.rs  supporter.rs
src/usecase/: auth.rs  band.rs  booking.rs  chat.rs  church.rs  donation.rs  event.rs  favorite.rs  mod.rs  music.rs  notification.rs  otp.rs  setting.rs  supporter.rs
