[package]
name = "ezra-axum"
version = "1.0.0"
edition = "2021"
description = "Ezra backend API — Rust/Axum port of the Go/Gin service, clean architecture"
license = "MIT"

[dependencies]
# Web framework & async runtime
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "migrate",
] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Auth & crypto
jsonwebtoken = "9"
bcrypt = "0.15"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Errors & logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config & utilities
dotenvy = "0.15"
rand = "0.8"
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }

# Outbound HTTP (Google OAuth, PayWay, FCM)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Email
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
